// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChangeURLModal should match snapshot, modal not showing 1`] = `
<Modal
  animation={true}
  aria-labelledby="changeUrlModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="changeUrlModalLabel"
    >
      Change URL
    </ModalTitle>
  </ModalHeader>
  <form
    className="form-horizontal"
    role="form"
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="form-group"
      >
        <label
          className="col-sm-3 form__label control-label"
        >
          <FormattedMessage
            defaultMessage="Channel URL"
            id="change_url.urlLabel"
          />
        </label>
        <div
          className="col-sm-9"
        >
          <div
            className="input-group input-group--limit"
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="urlTooltip"
                  placement="right"
                >
                  http://example.com/channel//channels
                </Tooltip>
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                className="input-group-addon"
              >
                http://exa...nel//channels/
              </span>
            </OverlayTrigger>
            <input
              autoFocus={true}
              className="form-control"
              maxLength={64}
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <p
            className="input__help"
          >
            <FormattedMessage
              defaultMessage="You can use lowercase letters, numbers, dashes, and underscores."
              id="change_url.helpText"
            />
          </p>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Close"
          id="change_url.close"
        />
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`components/ChangeURLModal should match snapshot, modal showing 1`] = `
<Modal
  animation={true}
  aria-labelledby="changeUrlModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="changeUrlModalLabel"
    >
      Change URL
    </ModalTitle>
  </ModalHeader>
  <form
    className="form-horizontal"
    role="form"
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="form-group"
      >
        <label
          className="col-sm-3 form__label control-label"
        >
          <FormattedMessage
            defaultMessage="Channel URL"
            id="change_url.urlLabel"
          />
        </label>
        <div
          className="col-sm-9"
        >
          <div
            className="input-group input-group--limit"
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="urlTooltip"
                  placement="right"
                >
                  http://example.com/channel//channels
                </Tooltip>
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                className="input-group-addon"
              >
                http://exa...nel//channels/
              </span>
            </OverlayTrigger>
            <input
              autoFocus={true}
              className="form-control"
              maxLength={64}
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <p
            className="input__help"
          >
            <FormattedMessage
              defaultMessage="You can use lowercase letters, numbers, dashes, and underscores."
              id="change_url.helpText"
            />
          </p>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Close"
          id="change_url.close"
        />
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`components/ChangeURLModal should match snapshot, on currentURL 1`] = `
<Modal
  animation={true}
  aria-labelledby="changeUrlModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="changeUrlModalLabel"
    >
      Change URL
    </ModalTitle>
  </ModalHeader>
  <form
    className="form-horizontal"
    role="form"
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="form-group"
      >
        <label
          className="col-sm-3 form__label control-label"
        >
          <FormattedMessage
            defaultMessage="Channel URL"
            id="change_url.urlLabel"
          />
        </label>
        <div
          className="col-sm-9"
        >
          <div
            className="input-group input-group--limit has-error"
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="urlTooltip"
                  placement="right"
                >
                  http://example.com/channel//channels
                </Tooltip>
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                className="input-group-addon"
              >
                http://exa...nel//channels/
              </span>
            </OverlayTrigger>
            <input
              autoFocus={true}
              className="form-control"
              maxLength={64}
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="has-error"
          >
            <p
              className="input__help error"
            >
              <Component />
            </p>
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Close"
          id="change_url.close"
        />
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`components/ChangeURLModal should match snapshot, on urlErrors 1`] = `
<Modal
  animation={true}
  aria-labelledby="changeUrlModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="changeUrlModalLabel"
    >
      Change URL
    </ModalTitle>
  </ModalHeader>
  <form
    className="form-horizontal"
    role="form"
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="form-group"
      >
        <label
          className="col-sm-3 form__label control-label"
        >
          <FormattedMessage
            defaultMessage="Channel URL"
            id="change_url.urlLabel"
          />
        </label>
        <div
          className="col-sm-9"
        >
          <div
            className="input-group input-group--limit has-error"
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="urlTooltip"
                  placement="right"
                >
                  http://example.com/channel//channels
                </Tooltip>
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                className="input-group-addon"
              >
                http://exa...nel//channels/
              </span>
            </OverlayTrigger>
            <input
              autoFocus={true}
              className="form-control"
              maxLength={64}
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="has-error"
          >
            <p
              className="input__help error"
            >
              <Component />
            </p>
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Close"
          id="change_url.close"
        />
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`components/ChangeURLModal should match snapshot, with a input 1`] = `
<Modal
  animation={true}
  aria-labelledby="changeUrlModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="changeUrlModalLabel"
    >
      Change URL
    </ModalTitle>
  </ModalHeader>
  <form
    className="form-horizontal"
    role="form"
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="form-group"
      >
        <label
          className="col-sm-3 form__label control-label"
        >
          <FormattedMessage
            defaultMessage="Channel URL"
            id="change_url.urlLabel"
          />
        </label>
        <div
          className="col-sm-9"
        >
          <div
            className="input-group input-group--limit"
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  bsClass="tooltip"
                  id="urlTooltip"
                  placement="right"
                >
                  http://example.com/channel//channels
                </Tooltip>
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                className="input-group-addon"
              >
                http://exa...nel//channels/
              </span>
            </OverlayTrigger>
            <input
              autoFocus={true}
              className="form-control"
              maxLength={64}
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <p
            className="input__help"
          >
            <FormattedMessage
              defaultMessage="You can use lowercase letters, numbers, dashes, and underscores."
              id="change_url.helpText"
            />
          </p>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Close"
          id="change_url.close"
        />
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </ModalFooter>
  </form>
</Modal>
`;
